--- a/pod.yml
+++ b/pod.yml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: loadbalancer-svc
+  name: python-lb
 spec:
   type: LoadBalancer
   selector:
@@ -14,7 +14,7 @@ spec:
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: loadbalancer-pod
+  name: python-pod
 spec:
   replicas: 3
   selector:
